Added lab5 starter code and implemented a file memory system to keep track of user data